--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,26 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="card mt-5">
-            <div class="card-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email">
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Enter password">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Sign In</button>
-                    <p class="mt-2">or <a href="./pages/signup/signup.html">Sign Up</a></p>
-                </form>
-            </div>
-        </div>
-    </div>
+    <h1>Login</h1>
+    <form id="loginForm">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br><br>
+        <input type="submit" value="Login">
+    </form>
 
     <!-- Add Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.23.0/axios.min.js"></script>
+    <script src="./scripts/signin.js"></script>
 </body>
 </html>
+
